my-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: default
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
