my-application/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wanderblog
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.aws.homelain.click`)
      kind: Rule
      services:
        - name: frontend-service
          port: 80

    - match: Host(`app.aws.homelain.click`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend-service
          port: 5000

  tls: {}
